# phishing-baiter

./: README.md  pyproject.toml
src/phishing_baiter/: __init__.py  data.py  utils.py
src/phishing_baiter/data/: __init__.py  email.py
